--- a/style.css
+++ b/style.css
@@ -4,25 +4,31 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #14b8a6;
+    /* background-color: #14b8a6; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    width: 500px;
+    margin: 0 auto;
 }
 
 .wrapper {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 325px;
+    min-height: 100vh;
+}
+
+.content {
+    margin: 8px;
 }
 
 .row {
     display: flex;
+    justify-content: center;
     flex-direction: row;
 }
 
@@ -38,6 +44,12 @@ button {
     margin-top: 10px;
 }
 
+button:hover {
+    cursor: pointer;
+    background-color: #333333;
+    transition: 0.5s all ease-in-out;
+}
+
 input {
     border: none;
     background-color: #eaeaea;
@@ -50,4 +62,27 @@ input {
 #pertanyaan {
     font-size: 1.6em;
     font-weight: 500;
+}
+
+#loaders {
+    display: none;
+    width: 85px;
+    height: 85px;
+    position: absolute;
+    border-top: 15px solid deeppink;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    z-index: 9;
+    animation: 1s spin infinite linear;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
